Cleaned up file structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Raj A. Desai</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" media="screen" href="style.css">
+    <link rel="stylesheet" media="screen" href="styles/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Amiko|Raleway+Dots|Raleway:400" rel="stylesheet">
   </head>
@@ -23,7 +23,7 @@
       <div class="jumbotron-fluid fix">
         <div class="row">
           <div class="col-xs-6 col-md-4 buttons">
-            <a class="btn btn-info btn-lg purple" href='RajDesaiResume.pdf' role="button" target="_blank"><span class="purple">Resume</span></a>
+            <a class="btn btn-info btn-lg purple" href='assets/RajDesaiResume.pdf' role="button" target="_blank"><span class="purple">Resume</span></a>
           </div>
           <div class="col-xs-6 col-md-4 buttons">
             <a class="btn btn-success btn-lg purple" href="http://github.com/RADesai" role="button" target="_blank"><span class="purple">GitHub</span></a>
