--- a/index.html
+++ b/index.html
@@ -6,34 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" media="screen" href="styles/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Amiko|Raleway+Dots|Raleway:400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amiko|Raleway+Dots|Raleway:300" rel="stylesheet">
   </head>
   <body>
-
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="row">
-        <div class="container-fluid title">
-          <h2>Welcome to my world!</h2>
-        </div>
-      </div>
-    </nav>
-
-    <!-- particle container -->
-    <div id="particles-js">
-      <div class="jumbotron-fluid fix">
-        <div class="row">
-          <div class="col-xs-6 col-md-4 buttons">
-            <a class="btn btn-info btn-lg purple" href='assets/RajDesaiResume.pdf' role="button" target="_blank"><span class="purple">Resume</span></a>
-          </div>
-          <div class="col-xs-6 col-md-4 buttons">
-            <a class="btn btn-success btn-lg purple" href="http://github.com/RADesai" role="button" target="_blank"><span class="purple">GitHub</span></a>
-          </div>
-          <div class="col-xs-6 col-md-4 buttons">
-            <a class="btn btn-primary btn-lg purple" href="http://linkedin.com/in/rajadesai" role="button" target="_blank"><span class="purple">LinkedIn</span></a>
-          </div>
+    <!-- nav/header -->
+    <div class="title">
+      <div class="well">
+        Hi, I'm Raj!
+        <div class="buttons">
+          <a class="btn btn-info btn-md" href='assets/RajDesaiResume.pdf' role="button" target="_blank">
+            <span class="letters">Resume</span>
+          </a>
+          <a class="btn btn-success btn-md" href="http://github.com/RADesai" role="button" target="_blank">
+            <span class="letters">GitHub</span>
+          </a>
+          <a class="btn btn-primary btn-md" href="http://linkedin.com/in/rajadesai" role="button" target="_blank">
+            <span class="letters">LinkedIn</span>
+          </a>
         </div>
       </div>
     </div>
+
+    <!-- particle container -->
+    <div id="particles-js"></div>
 
     <!-- footer -->
     <div id="footer">
