--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="well">
         Hi, I'm Raj!
         <div class="buttons">
-          <a class="btn btn-info btn-md" href='assets/RajDesaiResume.pdf' role="button" target="_blank">
+          <a class="btn btn-info btn-md" href='assets/RDesai_Resume.pdf' role="button" target="_blank">
             <span class="letters">Resume</span>
           </a>
           <a class="btn btn-success btn-md" href="http://github.com/RADesai" role="button" target="_blank">
